feat: add publication author management
